<resources>
    <string name="app_name">PokeInfo</string>
    <string name="pokemon_order">N° %1$s</string>
    <string name="home">Home</string>
    <string name="pokemon_details">Pokemon details</string>
    <string name="edit_height">%1$s m</string>
    <string name="edit_weight">%1$s kg</string>
    <string name="habitat">Habitat:</string>
    <string name="category">Category:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="weakness">Weakness</string>
    <string name="hint_search">Search by name</string>
    <string name="search">Search</string>
    <string name="about_description">Here\'s our Kotlin app, which uses the public Pokemon API to provide a complete listing of all Pokemon. You can get detailed information on each one by clicking on their cards, and use our search page to quickly find any specific Pokemon. All in a smooth and reliable user experience. Download now and start exploring the world of Pokemon!</string>
    <string name="author">By Joalisson Gomes</string>
    <string name="about">About PokeInfo</string>
</resources>